# sgr

./: CMakeLists.txt  LICENSE  README.md  sgr.cpp  sgr.hpp
include/sgr/: sgr.hpp
src/: sgr.cpp  sgr_mpi.cpp
